апи, корзина, слайдер

--- a/output/main.css
+++ b/output/main.css
@@ -15,6 +15,10 @@ a {
   text-decoration: none;
 }
 
+:root {
+  --index:call(1vw+1vh) ;
+}
+
 button {
   padding: 0;
   border: none;
@@ -25,7 +29,7 @@ button {
 }
 
 .body {
-  width: 1440px;
+  max-width: 1440px;
   margin: 0 auto;
   display: grid;
   min-height: 100vh;
@@ -55,10 +59,12 @@ button {
   color: #1c2a39;
 }
 .header__nav {
+  padding: 0 20px 0 20px;
   display: flex;
   align-items: center;
   width: 372px;
-  gap: 40px;
+  min-width: 330px;
+  justify-content: space-between;
 }
 .header__nav-link {
   width: max-content;
@@ -73,16 +79,44 @@ button {
 }
 .header__nav-link.active {
   font-weight: 900;
-  color: #1C2A39;
+  color: #1c2a39;
 }
 .header__box {
+  position: relative;
   margin: 0 158px 0 0;
-  width: 121px;
   height: 27px;
   display: flex;
   align-items: center;
   gap: 40px;
 }
+.header__box-count-product {
+  position: absolute;
+  right: -3px;
+  bottom: 3px;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  background: #ff353a;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 12px;
+  text-transform: capitalize;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+}
+.header__box-count-product.active {
+  opacity: 1;
+}
+
 .main {
   display: flex;
   align-items: center;
@@ -91,6 +125,9 @@ button {
 }
 
 .advertising {
+  width: 77.7vw;
+  max-width: 1120px;
+  min-width: 700px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -101,8 +138,10 @@ button {
 .advertising__slider {
   position: relative;
   padding: 0;
-  width: 1120px;
-  height: 702px;
+  width: 100%;
+  height: 48.7vw;
+  min-height: 440px;
+  max-height: 702px;
 }
 .advertising__slider-image {
   background-size: cover;
@@ -113,6 +152,11 @@ button {
   left: 0;
   top: 0;
   opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  -moz-transition: opacity 0.5s ease-in-out;
+  -ms-transition: opacity 0.5s ease-in-out;
+  -o-transition: opacity 0.5s ease-in-out;
 }
 .advertising__slider-image.active {
   opacity: 1;
@@ -124,7 +168,7 @@ button {
   position: absolute;
   top: 79px;
   right: -86px;
-  background: #9E98DC;
+  background: #9e98dc;
   width: 149px;
   height: 204px;
   padding: 20px;
@@ -134,7 +178,7 @@ button {
   right: -160px;
   width: 137px;
   height: 273px;
-  background: #FF8FE6;
+  background: #ff8fe6;
 }
 .advertising__old-book--text {
   max-width: 109px;
@@ -158,7 +202,7 @@ button {
   cursor: pointer;
   width: 12px;
   height: 12px;
-  background: #EFEEF6;
+  background: #efeef6;
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -166,7 +210,7 @@ button {
   -o-border-radius: 50%;
 }
 .advertising__point.active {
-  background: #9E98DC;
+  background: #9e98dc;
 }
 
 .block {
@@ -174,14 +218,10 @@ button {
   width: 100%;
   position: relative;
   display: flex;
-  align-items: center;
-  justify-content: flex-end;
+  align-items: start;
 }
 .block__nav {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 416px;
+  min-width: 416px;
   height: 710px;
   background: #efeef6;
   display: flex;
@@ -198,6 +238,7 @@ button {
   line-height: 15px;
   text-transform: capitalize;
   color: #5c6a79;
+  cursor: pointer;
 }
 .block__nav-link.active {
   font-weight: 700;
@@ -206,8 +247,8 @@ button {
   color: #1c2a39;
 }
 .block__box {
-  margin: 30px 160px 0 0;
-  width: 923px;
+  margin: 30px 160px 0 -60px;
+  max-width: 923px;
   display: flex;
   gap: 62px 75px;
   align-items: center;
@@ -223,11 +264,12 @@ button {
 .card-book__img {
   width: 212px;
   height: 327px;
-  background-image: url(4e008c4c29934ee4a694.png);
   background-size: cover;
+  background-position: center center;
   box-shadow: 0px 24px 36px rgba(53, 49, 84, 0.28);
 }
 .card-book__box {
+  max-width: 176px;
   display: flex;
   align-items: start;
   justify-content: center;
@@ -299,6 +341,16 @@ button {
   text-transform: uppercase;
   color: #4c3db2;
   border: 1px solid #4c3db2;
+}
+.card-book__box-button.in-the-cart {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 8px;
+  line-height: 10px;
+  text-transform: uppercase;
+  color: #5c6a79;
+  border: 1px solid #eeedf5;
 }
 
 .button-load {
