--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,9 +7,7 @@
 a {
     text-decoration: none;
 }
-:root{
-    --index:call(1vw+1vh)
-}
+
 button {
     padding: 0;
     border: none;
@@ -96,7 +94,7 @@ button {
     }
 
     //.header__box-count-product
-    
+
     &__box-count-product {
         position: absolute;
         right: -3px;
@@ -120,7 +118,7 @@ button {
         align-items: center;
         justify-content: center;
         opacity: 0;
-        &.active{
+        &.active {
             opacity: 1;
         }
     }
@@ -150,7 +148,7 @@ button {
         width: 100%;
         height: 48.7vw;
         min-height: 440px;
-        max-height:702px ;
+        max-height: 702px;
     }
 
     &__slider-image {
@@ -179,15 +177,15 @@ button {
         flex-direction: column;
         justify-content: flex-end;
         position: absolute;
-        top: 79px;
-        right: -86px;
+        top: 12%;
+        right: -10%;
         background: #9e98dc;
         width: 149px;
         height: 204px;
         padding: 20px;
         &.two {
-            top: 360px;
-            right: -160px;
+            top: 51%;
+            right: -14%;
             width: 137px;
             height: 273px;
             background: #ff8fe6;
@@ -245,7 +243,6 @@ button {
     // .block__nav
 
     &__nav {
-        
         min-width: 416px;
         height: 710px;
         background: #efeef6;
@@ -256,6 +253,14 @@ button {
         gap: 23px;
     }
 
+    //block__nav-box
+
+    &__nav-box {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 16px;
+    }
     // .block__nav-link
 
     &__nav-link {
@@ -267,6 +272,11 @@ button {
         text-transform: capitalize;
         color: #5c6a79;
         cursor: pointer;
+        transition: all 0.15s ease;
+        -webkit-transition: all 0.15s ease;
+        -moz-transition: all 0.15s ease;
+        -ms-transition: all 0.15s ease;
+        -o-transition: all 0.15s ease;
         &.active {
             font-weight: 700;
             font-size: 16px;
@@ -275,22 +285,47 @@ button {
         }
     }
 
+    //block__nav-circle
+
+    &__nav-circle {
+        width: 6px;
+        height: 6px;
+        background: #756ad3;
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+        opacity: 0;
+        transition: all 0.15s ease;
+        -webkit-transition: all 0.15s ease;
+        -moz-transition: all 0.15s ease;
+        -ms-transition: all 0.15s ease;
+        -o-transition: all 0.15s ease;
+        &.active {
+            opacity: 1;
+        }
+    }
+
     // .block__box
 
     &__box {
         margin: 30px 160px 0 -60px;
         max-width: 923px;
+        min-height: 1200px;
         display: flex;
         gap: 62px 75px;
-        align-items: center;
+        align-items: start;
         flex-wrap: wrap;
         z-index: 2;
     }
 }
+
 .card-book {
     display: flex;
     gap: 36px;
     width: 424px;
+    
     // .card-book__img
 
     &__img {
