--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;900&family=Open+Sans&family=Raleway:wght@100;300&display=swap");
+@import url("../node_modules/sal.js/dist/sal.css");
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
 }
 a {
     text-decoration: none;
